--- a/src/Makefile
+++ b/src/Makefile
@@ -29,12 +29,12 @@ TESTS = \
     tests/test_doublefact.o \
     tests/test_integration_perf.o \
     tests/test_mie.o \
-    tests/test_Plm.o \
     tests/test_Lambda.o \
-    tests/test_logdet.o \
-    tests/test_logdet_HT.o \
     tests/tests.o \
     tests/unittest.o
+#   tests/test_logdet_HT.o \
+#   tests/test_logdet.o \
+#   tests/test_Plm.o \
 # tests/test_mie_drude.o
 # tests/test_fresnel.o
 # tests/test_integration_drude.o
@@ -47,7 +47,7 @@ CFLAGS = -std=c99
 CFLAGS += -I . -I cquadpack/include
 
 # enable warnings and make them fatal
-CFLAGS += -g -Wall -Werror -Wextra -Wmissing-prototypes -Wshadow -Wpointer-arith -Wcast-qual -Wwrite-strings -Wno-unused-parameter
+CFLAGS += -g -Wall -Wextra -Werror -Wmissing-prototypes -Wshadow -Wpointer-arith -Wcast-qual -Wwrite-strings -Wno-unused-parameter
 # profiling
 #CFLAGS += -g -pg
 
