--- a/src/Makefile
+++ b/src/Makefile
@@ -48,7 +48,7 @@ CFLAGS = -std=c99
 CFLAGS += -I . -I cquadpack/include
 
 # enable warnings and make them fatal
-CFLAGS += -g -Wall -Wextra -Werror -Wmissing-prototypes -Wshadow -Wpointer-arith -Wcast-qual -Wwrite-strings -Wno-unused-parameter
+CFLAGS += -g -Wall -Wextra -Werror -Wmissing-prototypes -Wshadow -Wpointer-arith -Wcast-qual -Wwrite-strings -Wno-unused-parameter -fstrict-aliasing
 # profiling
 #CFLAGS += -g -pg
 
@@ -62,7 +62,7 @@ LDFLAGS += -lm -pthread -llapack -lblas -lgfortran
 TARGET = "../bin/"
 
 # optimize for native CPU
-OPT = -march=native -O3 -mmmx -msse -msse2
+OPT = -march=native -O3 -mmmx -msse -msse2 -msse3 -msse4
 OPT +=-flto
 
 # This file contains header dependencies. dependencies and dependencies_test will update this file.
