--- a/src/Makefile
+++ b/src/Makefile
@@ -29,18 +29,18 @@ OBJS = \
     utils.o
 
 TESTS = \
-    tests/test_bessels.o \
-    tests/test_doublefact.o \
-    tests/test_integration_perf.o \
-    tests/test_mie.o \
     tests/test_Lambda.o \
     tests/tests.o \
-    tests/unittest.o
+    tests/unittest.o \
+    tests/test_bessels.o \
+    tests/test_doublefact.o \
+    tests/test_fresnel.o \
+    tests/test_mie.o \
+    tests/test_Plm.o
+#   tests/test_integration_perf.o \
 #   tests/test_logdet_HT.o \
 #   tests/test_logdet.o \
-#   tests/test_Plm.o \
 # tests/test_mie_drude.o
-# tests/test_fresnel.o
 # tests/test_integration_drude.o
 
 # use C99 standard
