remove target casimir_Fn

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-.PHONY: clean doc casimir casimir_logdetD casimir_hiT casimir_Fn casimir_T0 casimir_tests dependencies dependencies_test
+.PHONY: clean doc casimir casimir_logdetD casimir_hiT casimir_T0 casimir_tests dependencies dependencies_test
 all: casimir casimir_logdetD
 
 # Choose a compiler.
@@ -98,9 +98,6 @@ integrate_K: integrate_K.o $(OBJS) dependencies
 casimir_hiT: casimir_hiT.o $(OBJS) dependencies
 	$(CC) $(CFLAGS) $(OPT) casimir_hiT.o $(OBJS) $(LDFLAGS) -o casimir_hiT
 
-casimir_Fn: casimir_Fn.o $(OBJS) dependencies
-	$(CC) $(CFLAGS) $(OPT) casimir_Fn.o $(OBJS) $(LDFLAGS) -o casimir_Fn
-
 casimir_tests: $(TESTS) $(OBJS) dependencies_test
 	$(CC) $(CFLAGS) $(OPT) $(TESTS) $(OBJS) $(LDFLAGS) -o casimir_tests
 	./casimir_tests
@@ -109,10 +106,10 @@ casimir_T0: casimir_T0.o $(OBJS) dependencies
 	$(MPICC) $(CFLAGS) $(OPT) casimir_T0.o $(OBJS) $(LDFLAGS) -o casimir_T0
 
 install:
-	cp casimir casimir_tests casimir_hiT casimir_logdetD casimir_Fn casimir_T0 ${TARGET}
+	cp casimir casimir_tests casimir_hiT casimir_logdetD casimir_T0 ${TARGET}
 
 clean:
-	rm -f casimir casimir_tests casimir_hiT casimir_logdetD casimir_Fn casimir_T0 *.o tests/*.o $(DEPEND_FILE)
+	rm -f casimir casimir_tests casimir_hiT casimir_logdetD casimir_T0 *.o tests/*.o $(DEPEND_FILE)
 	rm -rf doc
 
 doc:
