Compile and execute tests for Mie coefficients (Drude)

--- a/src/Makefile
+++ b/src/Makefile
@@ -36,11 +36,11 @@ TESTS = \
     tests/test_doublefact.o \
     tests/test_fresnel.o \
     tests/test_mie.o \
-    tests/test_Plm.o
+    tests/test_Plm.o \
+    tests/test_mie_drude.o
 #   tests/test_integration_perf.o \
 #   tests/test_logdet_HT.o \
 #   tests/test_logdet.o \
-# tests/test_mie_drude.o
 # tests/test_integration_drude.o
 
 # use C99 standard
