specify directory to HODLR library and header files

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,10 @@
 .PHONY: clean doc casimir casimir_logdetD casimir_hiT casimir_T0 casimir_tests dependencies dependencies_test
 all: casimir_logdetD
 
+HODLRDIR            = ../../hodlr_wrapper
+HODLRINCLUDEDIR     = ../../hodlr_wrapper/include
+CQUADPACKINCLUDEDIR = cquadpack/include
+
 # Choose a compiler.
 # At the moment gcc, clang and icc are supported.
 ifeq ($(CC),)
@@ -57,7 +61,7 @@ CFLAGS = -std=c99
 
 # use traditional GNU semantics for inline
 #CFLAGS += -fgnu89-inline
-CFLAGS += -I . -I cquadpack/include -I /cfs/home/h/a/hartmmic/git/hodlr/include
+CFLAGS += -I . -I ${CQUADPACKINCLUDEDIR} -I ${HODLRINCLUDEDIR}
 
 # enable warnings
 CFLAGS += -g -Wall -Wextra -Wmissing-prototypes -Wshadow -Wpointer-arith -Wcast-qual -Wwrite-strings -Wno-unused-parameter -fstrict-aliasing
@@ -69,7 +73,7 @@ endif
 #CFLAGS += -pg
 
 # ldflags
-LDFLAGS += -lm -pthread -llapack -lblas -lgfortran -L /cfs/home/h/a/hartmmic/git/hodlr -lhodlr
+LDFLAGS += -lm -pthread -llapack -lblas -lgfortran -L ${HODLRDIR} -lhodlr
 
 # clang supports various runtime checks. This will slow down the program, but
 # it's a good and easy way to find bugs.
