Remove functions casimir_vfprintf and casimir_fprintf
These functions are obsolete and no longer used. Also, we can remove the mutex
and the dependence on pthreads.

--- a/src/Makefile
+++ b/src/Makefile
@@ -75,7 +75,7 @@ endif
 #CFLAGS += -pg
 
 # ldflags
-LDFLAGS += -lm -pthread -lgfortran -L ${HODLRDIR} -lhodlr
+LDFLAGS += -lm -lgfortran -L ${HODLRDIR} -lhodlr
 
 ifeq ($(SUPPORT_LAPACK),TRUE)
     LDFLAGS += -lblas -llapack
