update list of input files

--- a/src/doxygen.conf
+++ b/src/doxygen.conf
@@ -581,7 +581,7 @@ WARN_LOGFILE           =
 # directories like "/usr/src/myproject". Separate the files or directories
 # with spaces.
 
-INPUT                  = mainpage.dox libcasimir.c libcasimir.h sfunc.c sfunc.h integration_drude.c integratio_drude.h integration_perf.c integration_perf.h utils.c utils.h matrix.c matrix.h
+INPUT                  = mainpage.dox bessel.c casimir.c casimir_logdetD.c constants.h hash-table.h integration.c libcasimir.c logfac.c material.c matrix.c matrix.h misc.h plm.h utils.h bessel.h casimir.h hash-table.c integration.h libcasimir.h logfac.h material.h misc.c plm.c utils.c
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is
