add flags -fma and -fma4

--- a/src/Makefile
+++ b/src/Makefile
@@ -61,7 +61,7 @@ TESTS = \
 # tests/test_integration_drude.o
 
 # use C99 standard
-CFLAGS = -std=c99
+CFLAGS = -std=c99 -mfma -mfma4
 
 # use traditional GNU semantics for inline
 #CFLAGS += -fgnu89-inline
@@ -89,7 +89,7 @@ endif
 #CFLAGS += -fsanitize=undefined,memory -fno-omit-frame-pointer
 
 # optimize
-OPT = -O3 -msse
+OPT = -O3 -msse -msse2
 
 # link time optimization
 #OPT += -flto
