replace hash-table by a simple, but fast cache

--- a/src/Makefile
+++ b/src/Makefile
@@ -34,8 +34,8 @@ OBJS = \
     cquadpack/src/dqk21.c \
     cquadpack/src/dqsort.c \
     bessel.c \
+    cache.c \
     plm.c \
-    hash-table.c \
     logfac.c \
     integration.o \
     libcasimir.o \
