add information on build

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,6 +7,10 @@ CQUADPACKINCLUDEDIR = cquadpack/include
 
 SUPPORT_LAPACK = FALSE
 
+GIT_HEAD=$(shell git rev-parse HEAD)
+GIT_BRANCH=$(shell git rev-parse --abbrev-ref HEAD)
+MACHINE=$(shell uname -a)
+
 # Choose a compiler.
 # At the moment gcc, clang and icc are supported.
 ifeq ($(CC),)
@@ -64,8 +68,16 @@ TESTS = \
 CFLAGS = -std=c99
 
 # use traditional GNU semantics for inline
-#CFLAGS += -fgnu89-inline
 CFLAGS += -I . -I ${CQUADPACKINCLUDEDIR} -I ${HODLRINCLUDEDIR}
+ifdef GIT_HEAD
+    CFLAGS += -DGIT_HEAD='"$(GIT_HEAD)"'
+endif
+ifdef GIT_BRANCH
+    CFLAGS += -DGIT_BRANCH='"$(GIT_BRANCH)"'
+endif
+ifdef GIT_HEAD
+    CFLAGS += -DMACHINE='"$(MACHINE)"'
+endif
 
 # enable warnings
 CFLAGS += -g -Wall -Wextra -Wmissing-prototypes -Wshadow -Wpointer-arith -Wcast-qual -Wwrite-strings -Wno-unused-parameter -fstrict-aliasing
