add . to the search directory

--- a/src/Makefile
+++ b/src/Makefile
@@ -85,7 +85,7 @@ endif
 #CFLAGS += -pg
 
 # ldflags
-LDFLAGS += -lm -L ${HODLRDIR} -lhodlr
+LDFLAGS += -lm -L . -L ${HODLRDIR} -lhodlr
 
 ifeq ($(SUPPORT_LAPACK),TRUE)
     LDFLAGS += -lgfortran -lblas -llapack
