add Fourier-Chebchev quadrature scheme

--- a/src/Makefile
+++ b/src/Makefile
@@ -26,6 +26,7 @@ OBJS = \
     cquadpack/src/dqk21.o \
     cquadpack/src/dqsort.o \
     bessel.o \
+    fcqs.c \
     plm.o \
     logfac.o \
     integration.o \
