use clang at the moment (wip)

--- a/src/libhodlr/tests/Makefile
+++ b/src/libhodlr/tests/Makefile
@@ -1,7 +1,7 @@
 OPT = -O3
 
 all:
-	${CXX} -w ${OPT} test.c -I ../include/ ../src/hodlr.cpp -I ../src/header/ -o test
+	clang++ -fsanitize=undefined -fno-omit-frame-pointer -w ${OPT} test.c -I ../include/ ../src/hodlr.cpp -I ../src/header/ -o test
 
 clean:
 	rm -f test
