--- a/src/doxygen.conf
+++ b/src/doxygen.conf
@@ -581,7 +581,7 @@ WARN_LOGFILE           =
 # directories like "/usr/src/myproject". Separate the files or directories
 # with spaces.
 
-INPUT                  = mainpage.dox bessel.c casimir.c casimir_logdetD.c constants.h integration.c libcasimir.c logfac.c material.c matrix.c matrix.h misc.h plm.h utils.h bessel.h casimir.h cache.c integration.h libcasimir.h logfac.h material.h misc.c plm.c utils.c fcqs.c
+INPUT                  = mainpage.dox bessel.c casimir.c casimir_logdetD.c constants.h integration.c libcasimir.c logfac.c material.c matrix.c matrix.h misc.h plm.h utils.h bessel.h casimir.h cache.c integration.h libcasimir.h logfac.h material.h misc.c plm.c psd.c utils.c fcqs.c
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is
