--- a/src/cylinder/Makefile
+++ b/src/cylinder/Makefile
@@ -1,2 +1,2 @@
 all:
-	g++ -Wall -Wextra -O3 cylinder.cpp -lcasimir -lhodlr -I.. -L.. -lgfortran -lblas -llapack -o cylinder
+	g++ -Wall -Wextra -O3 cylinder.cpp -lcasimir -lhodlr -I.. -L.. -L../libhodlr -lgfortran -lblas -llapack -o cylinder
